fix installer build test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,14 +45,15 @@ jobs:
       - run:
           name: cmake3 and make
           command: |
-            cd build
-            #git reset --hard origin/main
-            #cmake3 -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON ..
-            #make
-            #make installer
-            #for f in VAPOR3-*.sh ; do mv "$f" "${f/Linux/CentOS7-Weekly}" ; done
-            #mkdir -p /tmp/workspace/installers
-            #mv *.sh /tmp/workspace/installers
+            cd /root/project/build
+            git pull
+            git reset --hard origin/main
+            cmake3 -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON ..
+            make
+            make installer
+            for f in VAPOR3-*.sh ; do mv "$f" "${f/Linux/CentOS7-Weekly}" ; done
+            mkdir -p /tmp/workspace/installers
+            mv *.sh /tmp/workspace/installers
 
       - persist_to_workspace:
           root: *workspace_root
