--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,8 @@ jobs:
           command: |
             cd /root/project/build
             git pull
+            git branch
+            pwd
             git checkout main
 #            git reset --hard origin/main
 #            cmake3 -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON ..
