--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,10 +46,10 @@ jobs:
           name: cmake3 and make
           command: |
             cd /root/project/build
-            git pull
-            git branch
-            pwd
-            git checkout main
+            #git pull
+            #git branch
+            #pwd
+            #git checkout main
 #            git reset --hard origin/main
 #            cmake3 -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON ..
 #            make
