--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,17 +46,16 @@ jobs:
           name: cmake3 and make
           command: |
             cd /root/project/build
-            #git pull
-            #git branch
-            #pwd
-            #git checkout main
-#            git reset --hard origin/main
-#            cmake3 -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON ..
-#            make
-#            make installer
-#            for f in VAPOR3-*.sh ; do mv "$f" "${f/Linux/CentOS7-Weekly}" ; done
-#            mkdir -p /tmp/workspace/installers
-#            mv *.sh /tmp/workspace/installers
+            git branch --set-upstream-to=origin/<branch> installers
+            git pull
+            git checkout main
+            git reset --hard origin/main
+            cmake3 -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON ..
+            make
+            make installer
+            for f in VAPOR3-*.sh ; do mv "$f" "${f/Linux/CentOS7-Weekly}" ; done
+            mkdir -p /tmp/workspace/installers
+            mv *.sh /tmp/workspace/installers
 
       - persist_to_workspace:
           root: *workspace_root
