--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,10 @@ jobs:
       - run:
           name: make installer
           command: |
-            cd build
+            cd /root/project/build
+            git branch --set-upstream-to=origin/installers installers
+            git pull
+            git checkout main
             git reset --hard origin/main
             cmake -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON ..
             make -j7
