--- a/share/docker/ubuntu18/Dockerfile
+++ b/share/docker/ubuntu18/Dockerfile
@@ -6,6 +6,8 @@ from ubuntu:18.04
 #                               #
 #################################
 
+RUN ls
+
 RUN apt-get update \
     && apt-get install -y curl \
     && apt-get install -y xz-utils \
