--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -189,9 +189,10 @@ jobs:
       - run:
           name: list workspace
           command: |
+            version=<< pipeline.parameters.vaporVersion >>
             cd /tmp/workspace/installers
             time=`date +"%d_%m_%y-%H:%M"`
-            ubu="VAPOR3-<< pipeline.parameters.vaporVersion >>-Ubuntu18-Weekly.sh"
+            ubu="VAPOR3-$version-Ubuntu18-Weekly.sh"
             mv $ubu ${ubu/Weekly/$time}
             brew install ghr
             endl=$'\n'
@@ -201,7 +202,7 @@ jobs:
             f=$f$sha$endl
             message="$e$f$g$h"
             echo $message > "/tmp/workspace/installers/sha256_for_"${time}
-            ghr -b "Installers are timestamped with the unix command date + \"%d_%m_%y-%H:%M\"" -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -replace new3.4_PreRelease /tmp/workspace/installers
+            ghr -b "Installers are timestamped with the unix command date + \"%d_%m_%y-%H:%M\"" -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -replace "$version_PreRelease" /tmp/workspace/installers
 
 
 workflows:
