--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,9 +187,10 @@ jobs:
     steps:
       - *attach_workspace
       - run:
-          name: list workspace
+          name: publish release
           command: |
             version=<< pipeline.parameters.vaporVersion >>
+            tag="$version_PreRelease"
             cd /tmp/workspace/installers
             time=`date +"%d_%m_%y-%H:%M"`
             ubu="VAPOR3-$version-Ubuntu18-Weekly.sh"
@@ -202,7 +203,7 @@ jobs:
             f=$f$sha$endl
             message="$e$f$g$h"
             echo $message > "/tmp/workspace/installers/sha256_for_"${time}
-            ghr -b "Installers are timestamped with the unix command date + \"%d_%m_%y-%H:%M\"" -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -replace "$version_PreRelease" /tmp/workspace/installers
+            ghr -b "Installers are timestamped with the unix command date + \"%d_%m_%y-%H:%M\"" -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -replace $tag /tmp/workspace/installers
 
 
 workflows:
