--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -195,12 +195,14 @@ jobs:
             tag="${version}_PreRelease"
             cd /tmp/workspace/installers
             time=`date +"%d_%m_%y-%H:%M"`
-            ubu="VAPOR3-$version-Ubuntu18-Weekly.sh"
-            mv $ubu ${ubu/Weekly/$time}
-            osx="VAPOR3-3.3.0-Darwin-Weekly.dmg"
-            mv $osx ${osx/Weekly/$time}
-            cent="VAPOR3-3.3.0-CentOS7-Weekly.sh"
-            mv $cent ${cent/Weekly/$time}
+            #ubu="VAPOR3-$version-Ubuntu18-Weekly.sh"
+            #mv $ubu ${ubu/Weekly/$time}
+            #osx="VAPOR3-$version-Darwin-Weekly.dmg"
+            #mv $osx ${osx/Weekly/$time}
+            #cent="VAPOR3-$version-CentOS7-Weekly.sh"
+            #mv $cent ${cent/Weekly/$time}
+            win="VAPOR3-$version-win64-Weekly.sh"
+            mv $win ${win64/Weekly/$time}
             brew install ghr
             endl=$'\n'
             e="sha 256"$endl
