--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,7 +143,7 @@ jobs:
             git reset --hard origin/main
             mkdir build
             cd build
-            & 'C:\\Program Files\\CMake\\bin\\cmake.exe' -S C:\Users\circleci\project -B C:\Users\circleci\project\build -DCMAKE_BUILD_TYPE:STRING=Release -G 'Visual Studio 16 2019' -A x64
+            & 'C:\\Program Files\\CMake\\bin\\cmake.exe' -S C:\Users\circleci\project -B C:\Users\circleci\project\build -DDIST_INSTALLER:string=ON -DCMAKE_BUILD_TYPE:STRING=Release -G 'Visual Studio 16 2019' -A x64
             msbuild C:\Users\circleci\project\build\PACKAGE.vcxproj /p:Configuration=Release /p:Platform=x64
             mkdir -p C:\Users\circleci\project\tmp\workspace\installers
             Copy-Item C:\Users\circleci\project\build\*.exe -Destination C:\Users\circleci\project\tmp\workspace\installers
@@ -225,16 +225,16 @@ jobs:
 workflows:
   installers:
     jobs:
-#      - build_ubuntu18_installer
-#      - build_centos7_installer
-#      - build_osx_installer
+      #- build_ubuntu18_installer
+      #- build_centos7_installer
+      #- build_osx_installer
       - build_win10_installer
 #          filters:
 #            branches:
 #              only: installers
       - release_preInstallers:
           requires:
-#            - build_ubuntu18_installer
-#            - build_centos7_installer
-#            - build_osx_installer
+            #- build_ubuntu18_installer
+            #- build_centos7_installer
+            #- build_osx_installer
             - build_win10_installer
