--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,6 +113,11 @@ jobs:
           paths: 
             - installers
 
+  build_win10_installer2:
+    executor: win/default
+    steps:
+      - checkout
+
   build_win10_installer:
     executor: win/default
     steps:
@@ -232,7 +237,7 @@ workflows:
       #- build_ubuntu18_installer
       #- build_centos7_installer
       #- build_osx_installer
-      - build_win10_installer
+      - build_win10_installer2
 #          filters:
 #            branches:
 #              only: installers
@@ -241,4 +246,4 @@ workflows:
             #- build_ubuntu18_installer
             #- build_centos7_installer
             #- build_osx_installer
-            - build_win10_installer
+            #- build_win10_installer
