build all installers

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -206,27 +206,27 @@ jobs:
             tag="${version}_PreRelease"
             cd /tmp/workspace/installers
             time=`date +"%d_%m_%y-%H:%M"`
-            #ubu="VAPOR3-$version-Ubuntu18-Weekly.sh"
-            #mv $ubu ${ubu/Weekly/$time}
-            #osx="VAPOR3-$version-Darwin-Weekly.dmg"
-            #mv $osx ${osx/Weekly/$time}
-            #cent="VAPOR3-$version-CentOS7-Weekly.sh"
-            #mv $cent ${cent/Weekly/$time}
+            ubu="VAPOR3-$version-Ubuntu18-Weekly.sh"
+            mv $ubu ${ubu/Weekly/$time}
+            osx="VAPOR3-$version-Darwin-Weekly.dmg"
+            mv $osx ${osx/Weekly/$time}
+            cent="VAPOR3-$version-CentOS7-Weekly.sh"
+            mv $cent ${cent/Weekly/$time}
             ls
             win="VAPOR3-$version-win64.exe"
             mv $win ${win/win64/win64-$time}
             brew install ghr
             endl=$'\n'
             e="sha 256"$endl
-            #f="Ubuntu18:  "
-            #sha=`shasum -a 256 VAPOR3*Ubuntu*`
-            #f=$f$sha$endl
-            #g="CentOS:    "
-            #sha=`shasum -a 256 VAPOR3*CentOS7*`
-            #g=$g$sha$endl
-            #h="OSX:       "
-            #sha=`shasum -a 256 VAPOR3*Darwin*`
-            #h=$h$sha$endl
+            f="Ubuntu18:  "
+            sha=`shasum -a 256 VAPOR3*Ubuntu*`
+            f=$f$sha$endl
+            g="CentOS:    "
+            sha=`shasum -a 256 VAPOR3*CentOS7*`
+            g=$g$sha$endl
+            h="OSX:       "
+            sha=`shasum -a 256 VAPOR3*Darwin*`
+            h=$h$sha$endl
             i=$'Windows10: `shasum -a 256 VAPOR3*win64*`\n'
             message="$e$f$g$h$i"
             echo $message > "/tmp/workspace/installers/sha256_for_"${time}
@@ -236,16 +236,13 @@ jobs:
 workflows:
   installers:
     jobs:
-      #- build_ubuntu18_installer
-      #- build_centos7_installer
-      #- build_osx_installer
+      - build_ubuntu18_installer
+      - build_centos7_installer
+      - build_osx_installer
       - build_win10_installer
-#          filters:
-#            branches:
-#              only: installers
       - release_preInstallers:
           requires:
-            #- build_ubuntu18_installer
-            #- build_centos7_installer
-            #- build_osx_installer
+            - build_ubuntu18_installer
+            - build_centos7_installer
+            - build_osx_installer
             - build_win10_installer
