add build hash test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -198,51 +198,60 @@ jobs:
     macos:
       xcode: "12.4.0"
     steps:
+      - checkout
+      - run:
+          name: get main
+          command: |
+            git checkout main
+            git pull --no-commit && git commit --allow-empty -m "Merge"
+            git reset --hard origin/main
       - *attach_workspace
       - run:
           name: publish release
           command: |
+            cd /Users/distiller/project
+            hash=`git rev-parse HEAD`
             version=<< pipeline.parameters.vaporVersion >>
             tag="${version}_PreRelease"
             cd /tmp/workspace/installers
             time=`date +"%d_%m_%y-%H:%M"`
             ubu="VAPOR3-$version-Ubuntu18-Weekly.sh"
             mv $ubu ${ubu/Weekly/$time}
-            osx="VAPOR3-$version-Darwin-Weekly.dmg"
-            mv $osx ${osx/Weekly/$time}
-            cent="VAPOR3-$version-CentOS7-Weekly.sh"
-            mv $cent ${cent/Weekly/$time}
-            ls
-            win="VAPOR3-$version-win64.exe"
-            mv $win ${win/win64/win64-$time}
+            #osx="VAPOR3-$version-Darwin-Weekly.dmg"
+            #mv $osx ${osx/Weekly/$time}
+            #cent="VAPOR3-$version-CentOS7-Weekly.sh"
+            #mv $cent ${cent/Weekly/$time}
+            #win="VAPOR3-$version-win64.exe"
+            #mv $win ${win/win64/win64-$time}
             brew install ghr
             endl=$'\n'
             e="sha 256"$endl
             f="Ubuntu18:  "
             sha=`shasum -a 256 VAPOR3*Ubuntu*`
-            f=$f$sha$endl
-            g="CentOS:    "
-            sha=`shasum -a 256 VAPOR3*CentOS7*`
-            g=$g$sha$endl
-            h="OSX:       "
-            sha=`shasum -a 256 VAPOR3*Darwin*`
-            h=$h$sha$endl
-            i=$'Windows10: `shasum -a 256 VAPOR3*win64*`\n'
-            message="$e$f$g$h$i"
-            echo $message > "/tmp/workspace/installers/sha256_for_"${time}
-            ghr -b "Installers are timestamped with the unix command date + \"%d_%m_%y-%H:%M\"" -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -replace ${tag} /tmp/workspace/installers
+            #f=$f$sha$endl
+            #g="CentOS:    "
+            #sha=`shasum -a 256 VAPOR3*CentOS7*`
+            #g=$g$sha$endl
+            #h="OSX:       "
+            #sha=`shasum -a 256 VAPOR3*Darwin*`
+            #h=$h$sha$endl
+            #i=$'Windows10: `shasum -a 256 VAPOR3*win64*`\n'
+            releaseMessage="Installers are timestamped with the unix command date + \"%d_%m_%y-%H:%M\"\r\nInstalles built on commig ${hash}"
+            shaMessage="$e$f$g$h$i"
+            echo $shaMessage > "/tmp/workspace/installers/sha256_for_"${time}
+            ghr -b ${releaseMessage} -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -replace ${tag} /tmp/workspace/installers
 
 
 workflows:
   installers:
     jobs:
       - build_ubuntu18_installer
-      - build_centos7_installer
-      - build_osx_installer
-      - build_win10_installer
+      #- build_centos7_installer
+      #- build_osx_installer
+      #- build_win10_installer
       - release_preInstallers:
           requires:
             - build_ubuntu18_installer
-            - build_centos7_installer
-            - build_osx_installer
-            - build_win10_installer
+            #- build_centos7_installer
+            #- build_osx_installer
+            #- build_win10_installer
