--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -239,6 +239,7 @@ jobs:
             releaseMessage="Installers are timestamped with the unix command date + \"%d_%m_%y-%H:%M\"\r\nInstalles built on commig ${hash}"
             shaMessage="$e$f$g$h$i"
             echo $shaMessage > "/tmp/workspace/installers/sha256_for_"${time}
+            echo "ghr -b ${releaseMessage} -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -replace ${tag} /tmp/workspace/installers"
             ghr -b ${releaseMessage} -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -replace ${tag} /tmp/workspace/installers
 
 
