--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -217,25 +217,25 @@ jobs:
             time=`date +"%d_%m_%y-%H:%M"`
             ubu="VAPOR3-$version-Ubuntu18-Weekly.sh"
             mv $ubu ${ubu/Weekly/$time}
-            #osx="VAPOR3-$version-Darwin-Weekly.dmg"
-            #mv $osx ${osx/Weekly/$time}
-            #cent="VAPOR3-$version-CentOS7-Weekly.sh"
-            #mv $cent ${cent/Weekly/$time}
-            #win="VAPOR3-$version-win64.exe"
-            #mv $win ${win/win64/win64-$time}
+            osx="VAPOR3-$version-Darwin-Weekly.dmg"
+            mv $osx ${osx/Weekly/$time}
+            cent="VAPOR3-$version-CentOS7-Weekly.sh"
+            mv $cent ${cent/Weekly/$time}
+            win="VAPOR3-$version-win64.exe"
+            mv $win ${win/win64/win64-$time}
             brew install ghr
             endl=$'\n'
             e="sha 256"$endl
             f="Ubuntu18:  "
             sha=`shasum -a 256 VAPOR3*Ubuntu*`
-            #f=$f$sha$endl
-            #g="CentOS:    "
-            #sha=`shasum -a 256 VAPOR3*CentOS7*`
-            #g=$g$sha$endl
-            #h="OSX:       "
-            #sha=`shasum -a 256 VAPOR3*Darwin*`
-            #h=$h$sha$endl
-            #i=$'Windows10: `shasum -a 256 VAPOR3*win64*`\n'
+            f=$f$sha$endl
+            g="CentOS:    "
+            sha=`shasum -a 256 VAPOR3*CentOS7*`
+            g=$g$sha$endl
+            h="OSX:       "
+            sha=`shasum -a 256 VAPOR3*Darwin*`
+            h=$h$sha$endl
+            i=$'Windows10: `shasum -a 256 VAPOR3*win64*`\n'
             releaseMessage="\"Installers are timestamped as %d_%m_%y-%H:%M, and are built on commit "${hash}"\""
             shaMessage="$e$f$g$h$i"
             echo $shaMessage > "/tmp/workspace/installers/sha256_for_"${time}
@@ -247,12 +247,12 @@ workflows:
   installers:
     jobs:
       - build_ubuntu18_installer
-      #- build_centos7_installer
-      #- build_osx_installer
-      #- build_win10_installer
+      - build_centos7_installer
+      - build_osx_installer
+      - build_win10_installer
       - release_preInstallers:
           requires:
             - build_ubuntu18_installer
-            #- build_centos7_installer
-            #- build_osx_installer
-            #- build_win10_installer
+            - build_centos7_installer
+            - build_osx_installer
+            - build_win10_installer
