--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,5 @@
 version: 2.1
 
-orbs:
-  win: circleci/windows@2.2.0
-
 references:
   workspace_root: &workspace_root
     /tmp/workspace
@@ -11,33 +8,6 @@ references:
       at: *workspace_root
 
 jobs:
-  build_ubuntu18_installer:
-    docker:
-      - image: sgpearse/vapor3-ubuntu18:latest
-
-    steps:
-      - checkout
-
-      - run:
-          name: make installer
-          command: |
-            cd /root/project/build
-            git branch --set-upstream-to=origin/installers installers
-            git pull
-            git checkout main
-            git reset --hard origin/main
-            cmake -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON ..
-            make -j7
-            make installer
-            for f in VAPOR3-*.sh ; do mv "$f" "${f/Linux/Ubuntu18-Weekly}" ; done
-            mkdir -p /tmp/workspace/installers
-            mv *.sh /tmp/workspace/installers
-
-      - persist_to_workspace:
-          root: *workspace_root
-          paths: 
-            - installers
-
   build_centos7_installer:
     docker:
       - image: sgpearse/vapor3-centos7:latest
@@ -48,161 +18,23 @@ jobs:
       - run:
           name: cmake3 and make
           command: |
-            cd /root/project/build
-            git branch --set-upstream-to=origin/installers installers
+            ls -lrth /usr/local/VAPOR-Deps
+            cd /VAPOR
+            git checkout master
             git pull
-            git checkout main
-            git reset --hard origin/main
+            git checkout $CIRCLE_BRANCH
+            cd build
             cmake3 -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON ..
             make
             make installer
-            for f in VAPOR3-*.sh ; do mv "$f" "${f/Linux/CentOS7-Weekly}" ; done
-            mkdir -p /tmp/workspace/installers
-            mv *.sh /tmp/workspace/installers
+            mkdir -p /tmp/installers
+            mv *.sh /tmp/installers
 
-      - persist_to_workspace:
-          root: *workspace_root
-          paths: 
-            - installers
 
-  build_osx_installer:
-    macos:
-      xcode: "12.4.0"
-    steps:
-      - run:
-          name: Make VAPOR-Deps
-          command: |
-            sudo mkdir -p /usr/local/VAPOR-Deps
-            sudo chmod -R 777 /usr/local/VAPOR-Deps
-            sudo chown -R `whoami` /usr/local/VAPOR-Deps
-
-      - checkout
-
-      - run:
-          name: Get dependencies 
-          command: |
-            export DEPS=/usr/local/VAPOR-Deps/2019-Aug-Darwin.tar.xz
-            if [ ! -f $DEPS ]; then
-                ~/project/.circleci/getOSXDeps.sh
-            fi
-
-      - run:
-          name: make VAPOR
-          command: |
-            git checkout main
-            git pull --no-commit && git commit --allow-empty -m "Merge"
-            git reset --hard origin/main
-            cp site_files/site.NCAR site.local
-            mkdir build
-            cd build
-            /usr/local/bin/cmake -DCPACK_BINARY_DRAGNDROP=ON -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON ..
-            make
-            make installer
-            for f in VAPOR3-*.dmg ; do mv "$f" "${f/Darwin/Darwin-Weekly}" ; done
-            mkdir -p /tmp/workspace/installers
-            mv *.dmg /tmp/workspace/installers
-          no_output_timeout: 30m
-
-      - persist_to_workspace:
-          root: *workspace_root
-          paths: 
-            - installers
-
-  build_win10_installer:
-    executor: win/default
-    steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: |
-            #choco install visualcpp-build-tools -version 14.0.25420.1 -y
-            choco install visualstudio2019-workload-vctools -y
-            choco install python -y
-            choco install git -y
-            choco install cmake -y
-            choco install nsis -y
-            python -m pip install gdown
-            #setx /M PATH "%PATH%;C:\Program Files (x86)\MSBuild\14.0\bin" 
-            setx /M PATH "%PATH%;C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\MSBuild\Current\Bin" 
-            msbuild -version
-            pwd
-            ls
-            python .circleci/downloadWin3rdParty.py
-      - run:
-          name: Build Vapor
-          command: |
-            Copy-Item site_files\* -Destination .
-            git pull
-            git checkout $CIRCLE_BRANCH
-            mkdir build
-            cd build
-            & 'C:\\Program Files\\CMake\\bin\\cmake.exe' -S C:\Users\circleci\project -B C:\Users\circleci\project\build -DCMAKE_BUILD_TYPE:STRING=Release -G 'Visual Studio 16 2019' -A x64
-            msbuild C:\Users\circleci\project\build\PACKAGE.vcxproj /p:Configuration=Release /p:Platform=x64
-            mkdir -p C:\Users\circleci\project\tmp\workspace\installers
-            Copy-Item C:\Users\circleci\project\build\*.exe -Destination C:\Users\circleci\project\tmp\workspace\installers\VAPOR3-3.2.0-win64-Weekly.exe
-          no_output_timeout: 45m
-
-      - persist_to_workspace:
-          root: *workspace_root
-          paths: 
-            - installers
-
-  release_on_github:
-    macos:
-      xcode: "11.1.0"
-    steps:
-      - *attach_workspace
-      - run:
-          name: list workspace
-          command: |
-            ls /tmp/workspace/installers
-      - run:
-          name: install ghr
-          command: |
-            brew install ghr
-      - run:
-          name: push assets with ghr
-          command: |
-            a=$'These installers are built weekly, and may not be stable.\n\n'
-            b=$'Official releases may be found below.\n\n'
-            c="Last built on "
-            d=`date +"%m-%d-%y".\n\n`
-            e="sha 256\n"
-            f="Ubuntu18:  `shasum -a 256 VAPOR3*Ubuntu*`"
-            g="CentOS:    `shasum -a 256 VAPOR3*CentOS7*`"
-            h="OSX:       `shasum -a 256 VAPOR3*Darwin*`"
-            #i="Windows10: `shasum -a 256 VAPOR3*win64*`"
-            message="$a$b$c$d$e$f$g$h"
-            echo $message
-            ghr -b "${message}" -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -recreate 3.4preRelease /tmp/workspace/installers
-
-  release_preInstallers:
-    macos:
-      xcode: "12.4.0"
-    steps:
-      - *attach_workspace
-      - run:
-          name: list workspace
-          command: |
-            cd /tmp/workspace/installers
-            time=`date +"%d_%m_%y-%H:%M"`
-            cent="VAPOR3-3.4.0-CentOS7-Weekly.sh"
-            mv $cent ${cent/Weekly/$time}
-            brew install ghr
-            endl=$'\n'
-            e="sha 256"$endl
-            g="CentOS:    "
-            sha=`shasum -a 256 VAPOR3*CentOS7*`
-            g=$g$sha$endl
-            message="$g"
-            echo $message > "/tmp/workspace/installers/sha256_for_"${time}
-            ghr -b "Installers are timestamped with the unix command date + \"%d_%m_%y-%H:%M\"" -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -replace 3.4_PreRelease /tmp/workspace/installers
-
+      - store_artifacts:
+          path: /tmp/installers
 
 workflows:
-  installers:
+  build:
     jobs:
       - build_centos7_installer
-      - release_preInstallers:
-          requires:
-            - build_centos7_installer
