revert config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,4 +34,7 @@ jobs:
 workflows:
   build:
     jobs:
-      - build_ubuntu18_installer
+      - build_ubuntu18_installer:
+          filters:
+            branches:
+              only: buildUbuntuInstaller
