--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,7 @@ jobs:
       - run:
           name: make installer
           command: |
-            git checkout master
-            cd /VAPOR/build
-            git pull
+            cd /root/project/build
             git checkout $CIRCLE_BRANCH
             cmake -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON ..
             make -j7
