--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,10 +18,7 @@ jobs:
       - run:
           name: cmake3 and make
           command: |
-            ls -lrth /usr/local/VAPOR-Deps
-            cd /VAPOR
-            git checkout master
-            git pull
+            cd /root/project/build
             git checkout $CIRCLE_BRANCH
             cd build
             cmake3 -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON ..
