--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,10 @@
 version: 2.1
 
+parameters:
+  vaporVersion:
+    type: string
+    default: "3.4.0"
+
 orbs:
   win: circleci/windows@2.2.0
 
@@ -11,50 +16,9 @@ references:
       at: *workspace_root
 
 jobs:
-  build_ubuntu18:
-    docker:
-      - image: sgpearse/vapor3-ubuntu18:latest
-
-    steps:
-      - run:
-          name: install python
-          command: |
-            apt-get update
-            apt-get install -y python3
-
-      - checkout
-
-      - run:
-          name: cmake and make
-          command: |
-            cd build
-            cmake -DBUILD_TEST_APPS=ON ..
-            make -j7 &> /tmp/output.txt
-
-      - store_artifacts:
-          path: /tmp/output.txt
-
-      - run:
-          name: Smoke test
-          command: |
-            python3 /root/project/test_apps/smokeTests/smokeTests.py --testDataRoot=/smokeTestData/smokeTestData --binaryRoot=/root/project/build/bin --resultsDir=/root/project/test_apps/smokeTests/testResults
-
-      - store_artifacts:
-          path: /project/test_apps/smokeTests/testResults
-
-      - run:
-          name: check for warnings
-          command: |
-            if grep -q warning /tmp/output.txt; then
-               cat /tmp/output.txt
-               exit -1
-            else
-               exit 0
-            fi
-
   build_ubuntu18_installer:
     docker:
-      - image: sgpearse/vapor3-ubuntu18:latest
+      - image: sgpearse/vapor3-ubuntu18installer:latest
 
     steps:
       - checkout
@@ -62,9 +26,11 @@ jobs:
       - run:
           name: make installer
           command: |
-            cd /VAPOR/build
+            cd /root/project/build
+            git branch --set-upstream-to=origin/installers installers
             git pull
-            git checkout $CIRCLE_BRANCH
+            git checkout main
+            git reset --hard origin/main
             cmake -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON ..
             make -j7
             make installer
@@ -77,44 +43,6 @@ jobs:
           paths: 
             - installers
 
-  check_leaks:
-    docker:
-      - image: sgpearse/vapor3-ubuntu18:latest
-
-    steps:
-      - checkout
-
-      - run:
-          name: cmake and make
-          command: |
-            cd /VAPOR
-            git pull
-            cd build
-            cmake -DCMAKE_BUILD_TYPE:String=Release ..
-            make
-            #valgrind --leak-check=yes bin/vapor > /tmp/output.txt
-            valgrind --leak-check=yes bin/vaporpychecker &> /tmp/vaporpychecker.txt
-            #valgrind --leak-check=yes bin/vapor &> /tmp/vapor.txt
-            #bin/vapor &> /tmp/vapor.txt
-
-      - store_artifacts:
-          path: /tmp/*.txt
-
-  build_centos7:
-    docker:
-      - image: sgpearse/vapor3-centos7:latest
-
-    steps:
-      - checkout
-
-      - run:
-          name: cmake3 and make
-          command: |
-            ls -lrth /usr/local/VAPOR-Deps
-            cd /root/project/build
-            cmake3 ..
-            make -j7
-
   build_centos7_installer:
     docker:
       - image: sgpearse/vapor3-centos7:latest
@@ -125,10 +53,11 @@ jobs:
       - run:
           name: cmake3 and make
           command: |
-            ls -lrth /usr/local/VAPOR-Deps
-            cd /VAPOR
+            cd /root/project/build
+            git branch --set-upstream-to=origin/installers installers
             git pull
-            cd build
+            git checkout main
+            git reset --hard origin/main
             cmake3 -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON ..
             make
             make installer
@@ -136,82 +65,14 @@ jobs:
             mkdir -p /tmp/workspace/installers
             mv *.sh /tmp/workspace/installers
 
-
       - persist_to_workspace:
           root: *workspace_root
           paths: 
             - installers
 
-  build_osx:
-    macos:
-      xcode: "11.1.0"
-    steps:
-      - run:
-          name: Make VAPOR-Deps
-          command: |
-            sudo mkdir -p /usr/local/VAPOR-Deps
-            sudo chmod -R 777 /usr/local/VAPOR-Deps
-            sudo chown -R `whoami` /usr/local/VAPOR-Deps
-            
-      #- restore_cache:
-      #    key: osxDeps-v5-{{ .Environment.CIRCLE_PROJECT_REPONAME }}
-
-      - checkout
-
-      - run:
-          name: Get dependencies 
-          command: |
-            export DEPS=/usr/local/VAPOR-Deps/2019-Aug-Darwin.tar.xz
-            if [ ! -f $DEPS ]; then
-                ~/project/.circleci/getOSXDeps.sh
-                #pip3 install gdown
-                #sudo mkdir -p /usr/local/VAPOR-Deps
-                #sudo chmod 777 /usr/local/VAPOR-Deps
-                #cd /usr/local/VAPOR-Deps
-                #gdown https://drive.google.com/uc?id=1kyDAzmK9zShrIcoAbned8YW9vn2j7lpe
-                #cd /usr/local/VAPOR-Deps
-                #tar xf 2019-Aug-Darwin.tar.xz -C /usr/local/VAPOR-Deps
-                #ls /usr/local/VAPOR-Deps
-            fi
-
-      #- run:
-      #    name: Install cmake
-      #    command: |
-      #      brew install cmake
-
-      - run:
-          name: make VAPOR
-          command: |
-            cp site_files/site.NCAR site.local
-            mkdir build
-            cd build
-            /usr/local/bin/cmake ..
-            make -j7 &> /tmp/output.txt
-
-      #- save_cache:
-      #    key: osxDeps-v5-{{ .Environment.CIRCLE_PROJECT_REPONAME }}
-      #    paths: 
-      #      - /VAPOR
-      #      - /usr/local/VAPOR-Deps
-      #      - /usr/local/lib/python3.7/site-packages/gdown
-      #      - /usr/local/bin/cmake
-      #      - /usr/local/Cellar/cmake
-
-      - store_artifacts:
-          path: /tmp/output.txt
-
-      - run:
-          name: check for warnings
-          command: |
-            if grep -q warning /tmp/output.txt; then
-               exit 1
-            else
-               exit 0
-            fi
-
   build_osx_installer:
     macos:
-      xcode: "11.1.0"
+      xcode: "12.4.0"
     steps:
       - run:
           name: Make VAPOR-Deps
@@ -219,9 +80,6 @@ jobs:
             sudo mkdir -p /usr/local/VAPOR-Deps
             sudo chmod -R 777 /usr/local/VAPOR-Deps
             sudo chown -R `whoami` /usr/local/VAPOR-Deps
-
-      #- restore_cache:
-      #    key: osxDeps-v5-{{ .Environment.CIRCLE_PROJECT_REPONAME }}
 
       - checkout
 
@@ -236,11 +94,12 @@ jobs:
       - run:
           name: make VAPOR
           command: |
+            git checkout main
+            git pull --no-commit && git commit --allow-empty -m "Merge"
+            git reset --hard origin/main
             cp site_files/site.NCAR site.local
             mkdir build
             cd build
-            git pull
-            git checkout $CIRCLE_BRANCH
             /usr/local/bin/cmake -DCPACK_BINARY_DRAGNDROP=ON -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON ..
             make
             make installer
@@ -253,44 +112,6 @@ jobs:
           root: *workspace_root
           paths: 
             - installers
-
-  clang_tidy_ubuntu18:
-    docker:
-      - image: sgpearse/vapor3-ubuntu18:latest
-    steps:
-      - checkout
-      - run:
-          name: CMake
-          command: |
-            cd /VAPOR/build
-            cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=true ..
-            clang-tidy -checks=cppcoreguidelines* -header-filter=.* -p ./ /VAPOR/apps/vaporgui/MainForm.cpp &> /tmp/tidy.txt
-
-      - store_artifacts:
-            path: /tmp/tidy.txt
-
-  clang_tidy_osx:
-    macos:
-      xcode: "11.1.0"
-    steps:
-      - checkout
-      - run:
-          name: check MainForm.cpp
-          command: |
-            sudo mkdir build
-            cd build
-      - run:
-          name: CMake
-          command: |
-            brew install cmake
-            cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=true ..
-      - run:
-          name: tidy
-          command: |
-            /usr/local/opt/llvm/bin/clang-tidy -checks=* -header-filter=.* -p ./ /VAPOR/apps/vaporgui/MainForm.cpp &> /tmp/tidy.txt
-
-      - store_artifacts:
-            path: /tmp/tidy.txt
 
   build_win10_installer:
     executor: win/default
@@ -313,17 +134,30 @@ jobs:
             ls
             python .circleci/downloadWin3rdParty.py
       - run:
+          name: Reset branch
+          command: |
+            git checkout main
+            git pull --no-commit 
+            git commit --allow-empty -m "Merge"
+            git reset --hard origin/winDebug
+          shell: bash.exe
+      - run:
+          name: dos2unix
+          command: |
+            dos2unix /c/Users/circleci/project/share/shaders/*
+            dos2unix /c/Users/circleci/project/share/shaders/main
+            dos2unix /c/Users/circleci/project/share/shaders/includes
+          shell: bash.exe 
+      - run:
           name: Build Vapor
           command: |
             Copy-Item site_files\* -Destination .
-            git pull
-            git checkout $CIRCLE_BRANCH
             mkdir build
             cd build
-            & 'C:\\Program Files\\CMake\\bin\\cmake.exe' -S C:\Users\circleci\project -B C:\Users\circleci\project\build -DCMAKE_BUILD_TYPE:STRING=Release -G 'Visual Studio 16 2019' -A x64
+            & 'C:\\Program Files\\CMake\\bin\\cmake.exe' -S C:\Users\circleci\project -B C:\Users\circleci\project\build -DDIST_INSTALLER:string=ON -DCMAKE_BUILD_TYPE:STRING=Release -G 'Visual Studio 16 2019' -A x64
             msbuild C:\Users\circleci\project\build\PACKAGE.vcxproj /p:Configuration=Release /p:Platform=x64
             mkdir -p C:\Users\circleci\project\tmp\workspace\installers
-            Copy-Item C:\Users\circleci\project\build\*.exe -Destination C:\Users\circleci\project\tmp\workspace\installers\VAPOR3-3.2.0-win64-Weekly.exe
+            Copy-Item C:\Users\circleci\project\build\*.exe -Destination C:\Users\circleci\project\tmp\workspace\installers
           no_output_timeout: 45m
 
       - persist_to_workspace:
@@ -331,83 +165,65 @@ jobs:
           paths: 
             - installers
 
-  release_on_github:
+  weekly:
     macos:
-      xcode: "11.1.0"
+      xcode: "12.4.0"
     steps:
+      - checkout
+      - run:
+          name: get main
+          command: |
+            git checkout main
+            git pull --no-commit && git commit --allow-empty -m "Merge"
+            git reset --hard origin/main
       - *attach_workspace
       - run:
-          name: list workspace
+          name: publish release
           command: |
-            ls /tmp/workspace/installers
-      - run:
-          name: install ghr
-          command: |
+            cd /Users/distiller/project
+            hash=`git rev-parse HEAD`
+            tag="Weekly"
+            #cd /tmp/workspace/installers
+            #time=`date +"%d_%m_%y-%H:%M"`
+            #ubu="VAPOR3-$version-Ubuntu18-Weekly.sh"
+            #mv $ubu ${ubu/Weekly/$time}
+            #osx="VAPOR3-$version-Darwin-Weekly.dmg"
+            #mv $osx ${osx/Weekly/$time}
+            #cent="VAPOR3-$version-CentOS7-Weekly.sh"
+            #mv $cent ${cent/Weekly/$time}
+            #win="VAPOR3-$version-win64.exe"
+            #mv $win ${win/win64/win64-$time}
             brew install ghr
-      - run:
-          name: push assets with ghr
-          command: |
-            a=$'These installers are built weekly, and may not be stable.\n\n'
-            b=$'Official releases may be found below.\n\n'
-            c="Last built on "
-            d=`date +"%m-%d-%y".`
-            message="${a}${b}${c}${d}${e}"
-            echo $message
-            ghr -b "${message}" -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -replace Weekly /tmp/workspace/installers
-
+            endl=$'\n'
+            title="sha 256"$endl
+            a="Ubuntu18:  "
+            sha=`shasum -a 256 VAPOR3*Ubuntu*`
+            ubuntuSha=$a$sha$endl
+            os="CentOS:    "
+            sha=`shasum -a 256 VAPOR3*CentOS7*`
+            centosSha=$os$sha$endl
+            os="OSX:       "
+            sha=`shasum -a 256 VAPOR3*Darwin*`
+            osxSha=$os$sha$endl
+            os="Windows:   "
+            sha=`shasum -a 256 VAPOR3*win64*`
+            winSha=$os$sha$endl
+            shaMessage="$title$ubuntuSha$centosSha$osxSha$winSha"
+            echo $shaMessage > "/tmp/workspace/installers/sha256.txt
+            echo ghr -b "Weely installers are untested an may not be stable.  Built on commit "${hash}"" -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -recreate -c ${hash} -n ${tag} ${tag} /tmp/workspace/installers
+            ghr -b "Installers are timestamped as %d_%m_%y-%H:%M, and are built on commit "${hash}"" -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -recreate -c ${hash} -n ${tag} ${tag} /tmp/workspace/installers
 
 
 workflows:
-  build:
+  weekly:
     jobs:
-      - build_ubuntu18
-      - build_centos7
-      #- build_ubuntu16
-      #- build_osx
-      #- build_win10_installer
-      #- test_win10_workspace
-      #- release_on_github:
-      #    requires:
-      #      - test_win10_workspace
-      #- clang_tidy_ubuntu18
-      #- build_ubuntu18_installer
-      #- build_centos7_installer
-      #- build_osx_installer
-      #- build_win10_installer
-      #- release_on_github:
-      #    requires:
-      #      - build_win10_installer
-      #      - build_ubuntu18_installer
-      #      - build_centos7_installer
-      #      - build_osx_installer
-
-#  leak_check:
-#    triggers:
-#      - schedule:
-#           cron: "0 7 1 * *" #monthly cron job @ midnight MST, on the 1st
-#           filters:
-#             branches:
-#               only:
-#                 - nightly
-#    jobs:
-#      - check_leaks
-
-#  nightly:
-#    triggers:
-#      - schedule:
-#           cron: "0 9 * * 5" #weekly cron job on Friday @ 2:00am MST
-#           filters:
-#             branches:
-#               only:
-#                 - main
-#    jobs:
-#      - build_ubuntu18_installer
-#      - build_centos7_installer
-#      - build_osx_installer
-#      - build_win10_installer
-#      - release_on_github:
-#          requires:
-#            - build_ubuntu18_installer
-#            - build_centos7_installer
-#            - build_osx_installer
-#            - build_win10_installer
+      - build_ubuntu18_installer
+      - build_centos7_installer
+      - build_osx_installer
+      - build_win10_installer
+      - release_weekly_installers:
+          requires:
+            - build_ubuntu18_installer
+            - build_centos7_installer
+            - build_osx_installer
+            - build_win10_installer
