--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,7 +139,7 @@ jobs:
             git checkout main
             git pull --no-commit 
             git commit --allow-empty -m "Merge"
-            git reset --hard origin/winDebug
+            git reset --hard origin/main
           shell: bash.exe
       - run:
           name: dos2unix
