--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -233,12 +233,12 @@ workflows:
     #             - weekly
     jobs:
       - build_ubuntu18_installer
-    #  - build_centos7_installer
+      - build_centos7_installer
     #  - build_osx_installer
     #  - build_win10_installer
       - release_weekly_installers:
           requires:
             - build_ubuntu18_installer
-    #        - build_centos7_installer
+            - build_centos7_installer
     #        - build_osx_installer
     #        - build_win10_installer
