--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -220,7 +220,7 @@ workflows:
   weekly:
     triggers:
       - schedule:
-           cron: "51 14 * * FRI" # Friday @ 14:30 UTC (Mountain Daylight Time +7)
+           cron: "* 16 * * 5" # Friday @ 16:00 UTC (Mountain Daylight Time +7)
            filters:
              branches:
                only:
